# gptTranslator

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
phase0/: translate.js
polyglot/: Cargo.toml
polyglot-app/src-tauri/: Cargo.toml  tauri.conf.json
polyglot-app/src-tauri/binaries/: audiotee-aarch64-apple-darwin
polyglot-app/src-tauri/capabilities/: default.json
polyglot-app/src-tauri/icons/: icon.icns
polyglot-app/src-tauri/src/: lib.rs  main.rs
polyglot-app/ui/: index.html
polyglot/src/: main.rs
scripts/: build-audiotee.sh
