[workspace]
resolver = "2"
members = [
    "polyglot",
    "polyglot-app/src-tauri",
]

[workspace.package]
edition = "2021"
authors = ["Jesse Anglen"]

# Speed up dev builds slightly without breaking anything
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
