[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
dotenvy = "0.15"
futures-util = "0.3"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
