[package]
name = "polyglot-app"
version = "0.1.0"
description = "Live speech translation for Google Meet via OpenAI gpt-realtime-translate"
authors = ["Jesse Anglen"]
edition = "2021"

[lib]
name = "polyglot_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio + WebSocket (lifted from polyglot/)
anyhow = "1"
base64 = "0.22"
cpal = "0.15"
dotenvy = "0.15"
futures-util = "0.3"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

